hphp/test/slow/continue_statement/badexp.php.expectf
HipHop Fatal error: 'continue' operator with non-constant operand is no longer supported in %s/test/slow/continue_statement/badexp.php on line 6
